Add SpringExecutionContextView to default application configuration path masks. fixes #234